--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ Faker==14.2.1
 Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.2
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 gunicorn==20.1.0
 launchdarkly-api @ git+https://github.com/launchdarkly/api-client-python.git@e3475bba72782cc660f11b1bc7f41f406b422ba2
 launchdarkly-server-sdk==7.5.0
+MarkupSafe==2.1.1
+marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
 PyJWT==2.5.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
